# Retro-Tetanus

./: Cargo.toml  README.md
src/: main.rs
ui/: constants.slint  main.slint  scrape_tab.slint  sort_tab.slint
