[package]
name = "retro-tetanus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rfd = "0.12.0"
slint = "1.2.1"
tokio = { version = "1.32.0", features = ["full"] }
walkdir = "2.4.0"

[build-dependencies]
slint-build = "1.2.1"
