[package]
name = "retro-tetanus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23.0"
egui = "0.23.0"
egui_extras = "0.23.0"
rfd = "0.12.0"
tokio = { version = "1.33.0", features = ["full"] }
walkdir = "2.4.0"
